# nodejs

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  nodejs.BUILD.bazel  platform_mappings
.github/workflows/: ci.yml
docs/: configure-check-audit.md
nodejs/: BUILD.bazel  compiler_options.bzl  extensions.bzl
nodejs/private/: BUILD.bazel  lief_sources.bzl  node_addon.bzl  node_javascript.bzl  node_sources.bzl  node_test.sh  node_test_getaddrinfo.c  node_test_getaddrinfo.map  node_test_runner.py  node_test_shards.bzl  openssl_sources.bzl  release_archive.bzl  release_mtree.c  repositories.bzl  versions.bzl  windows_resource.bzl
nodejs/private/overlays/crates/: BUILD.bazel  BUILD.crates.bazel  files.bzl  rust_crate_defs.bzl
nodejs/private/overlays/crates/build_files/: BUILD.patches__resb__BUILD.bazel  BUILD.vendor__autocfg__BUILD.bazel  BUILD.vendor__calendrical_calculations__BUILD.bazel  BUILD.vendor__core_maths__BUILD.bazel  BUILD.vendor__diplomat-runtime__BUILD.bazel  BUILD.vendor__diplomat__BUILD.bazel  BUILD.vendor__diplomat_core__BUILD.bazel  BUILD.vendor__displaydoc__BUILD.bazel  BUILD.vendor__icu_calendar__BUILD.bazel  BUILD.vendor__icu_calendar_data__BUILD.bazel  BUILD.vendor__icu_collections__BUILD.bazel  BUILD.vendor__icu_locale__BUILD.bazel  BUILD.vendor__icu_locale_core__BUILD.bazel  BUILD.vendor__icu_locale_data__BUILD.bazel  BUILD.vendor__icu_provider__BUILD.bazel  BUILD.vendor__ixdtf-0.5.0__BUILD.bazel  BUILD.vendor__ixdtf__BUILD.bazel  BUILD.vendor__libm__BUILD.bazel  BUILD.vendor__litemap__BUILD.bazel  BUILD.vendor__num-traits__BUILD.bazel  BUILD.vendor__potential_utf__BUILD.bazel  BUILD.vendor__proc-macro2__BUILD.bazel  BUILD.vendor__quote__BUILD.bazel  BUILD.vendor__serde__BUILD.bazel  BUILD.vendor__serde_core__BUILD.bazel  BUILD.vendor__serde_derive__BUILD.bazel  BUILD.vendor__smallvec__BUILD.bazel  BUILD.vendor__stable_deref_trait__BUILD.bazel  BUILD.vendor__strck__BUILD.bazel  BUILD.vendor__syn__BUILD.bazel  BUILD.vendor__synstructure__BUILD.bazel  BUILD.vendor__temporal_capi__BUILD.bazel  BUILD.vendor__temporal_rs__BUILD.bazel  BUILD.vendor__timezone_provider__BUILD.bazel  BUILD.vendor__tinystr__BUILD.bazel  BUILD.vendor__unicode-ident__BUILD.bazel  BUILD.vendor__writeable__BUILD.bazel  BUILD.vendor__yoke-derive__BUILD.bazel  BUILD.vendor__yoke__BUILD.bazel  BUILD.vendor__zerofrom-derive__BUILD.bazel  (+5 more)
nodejs/private/overlays/icu/: BUILD.bazel  BUILD.icu.bazel
nodejs/private/patches/highway/: BUILD.bazel  rules-cc.patch
nodejs/private/patches/llvm/: BUILD.bazel  msvc-cxx-standard.patch  msvc-module-map.patch  msvc-runtime-features.patch  msvc-vfs-overlay.patch  msvc-warning-level.patch
nodejs/private/patches/nodejs/: BUILD.bazel  histogram-windows-intrinsic.patch  libffi-clang-cl-inline-asm.patch
nodejs/private/patches/rules_cc_autoconf/: BUILD.bazel  windows-clang-cl-command-line.patch  windows-clang-cl-exceptions.patch  windows-msvc-driver-link-flags.patch  windows-native-command-paths.patch
nodejs/private/patches/rules_rs/: BUILD.bazel  rust-objcopy.patch  windows-bcrypt-case.patch
nodejs/private/patches/v8/: BUILD.bazel  hermetic-toolchain.patch  llvm-ml.patch  nodejs-config.patch  nodejs-icu.patch  nodejs-targets.patch  simd256.patch  temporal.patch  windows-arm64-cpu.patch  windows-defines.patch  windows-libraries.patch  windows-target-config.patch  zlib.patch
nodejs/private/patches/windows_support/: BUILD.bazel  windows-sdk-vfs-overlay.patch
tests/ada/: BUILD.bazel  ada_test.cc
tests/brotli/: BUILD.bazel  brotli_test.c
tests/cares/: BUILD.bazel  cares_test.c
tests/histogram/: BUILD.bazel  histogram_test.c
tests/icu/: BUILD.bazel  icu_data_test.cc
tests/integration/: BUILD.bazel  MODULE.bazel  source_contract_test.sh
tests/js2c/: BUILD.bazel  config.gypi  fixture.js  fixture.mjs  node_javascript_test.sh  node_js2c_test.sh
tests/libffi/: BUILD.bazel  libffi_test.c
tests/libnode/: BUILD.bazel  libnode_test.cc
tests/libuv/: BUILD.bazel  libuv_version_test.c
tests/lief/: BUILD.bazel  lief_test.cc
tests/llhttp/: BUILD.bazel  llhttp_test.c
tests/merve/: BUILD.bazel  merve_test.cc
tests/nbytes/: BUILD.bazel  nbytes_test.cc
tests/ncrypto/: BUILD.bazel  ncrypto_test.cc
tests/nghttp2/: BUILD.bazel  nghttp2_test.c
tests/node/: BUILD.bazel  node_snapshot_test.sh  node_test.sh  node_windows_test.py
tests/node_config/: BUILD.bazel  node_config_test.sh
tests/openssl/: BUILD.bazel  openssl_test.c
tests/release/: BUILD.bazel  release_archive_test.py  windows_release_archive_validator.py
tests/rust/: BUILD.bazel  rust_toolchain_test.rs
tests/simdjson/: BUILD.bazel  simdjson_test.cc
tests/sqlite/: BUILD.bazel  sqlite_test.c
tests/temporal/: BUILD.bazel  temporal_capi_test.cc  v8_temporal_test.cc  v8_temporal_test.js
tests/unsupported_version/: .bazelrc  BUILD.bazel  MODULE.bazel
tests/uvwasi/: BUILD.bazel  uvwasi_test.c
tests/v8_config/: BUILD.bazel  v8_config_test.cc
tests/zlib/: BUILD.bazel  zlib_test.c
tests/zstd/: BUILD.bazel  zstd_test.c
tools/: configure_check_audit.sh  configure_inventory.py  configure_release_settings.json
tools/crates_vendor/: BUILD.bazel  generate_build_files.py  install_build_files.py
tools/lief_sources/: BUILD.bazel  generate.py
tools/node_config/: BUILD.bazel  generate.py
tools/node_sources/: BUILD.bazel  generate.py
tools/openssl_sources/: BUILD.bazel  generate.py
