exports_files(["nodejs.BUILD.bazel"])

platform(
    name = "local_windows_platform",
    constraint_values = [
        "@llvm//constraints/windows/abi:msvc",
    ],
    parents = ["@platforms//host"],
)

platform(
    name = "windows_arm64_local_execution_platform",
    constraint_values = [
        "@llvm//constraints/windows/abi:msvc",
        "@platforms//cpu:aarch64",
        "@platforms//os:windows",
    ],
)

platform(
    name = "rbe_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@llvm//constraints/libc:gnu.2.28",
    ],
    exec_properties = {
        "Arch": "amd64",
        "OSFamily": "Linux",
        "container-image": "docker://buildpack-deps@sha256:7d9a7601d4e042e3578d7557186c745e03524bd3c751680618639db99d7e9ced",
    },
    visibility = ["//visibility:public"],
)
