module(
    name = "nodejs",
    version = "0.0.0",
    bazel_compatibility = [">=9.1.1"],
)

bazel_dep(name = "abseil-cpp", version = "20250814.0")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)

bazel_dep(name = "bzip2", version = "1.0.8.bcr.4")
bazel_dep(name = "highway", version = "1.2.0")
bazel_dep(name = "llvm", version = "0.8.8")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_cc_autoconf", version = "0.12.1")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_rs", version = "0.0.86")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "tar.bzl", version = "0.10.5")

archive_override(
    module_name = "llvm",
    integrity = "sha256-sSr0NUsY06DQwPoxgh+drMpOkeG/N7Lx+KxWkZTFUDM=",
    strip_prefix = "hermetic-llvm-85d29dc776702879eb9cbcbe560428df7fd24e64",
    urls = ["https://github.com/hermeticbuild/hermetic-llvm/archive/85d29dc776702879eb9cbcbe560428df7fd24e64.tar.gz"],
)

archive_override(
    module_name = "rules_cc",
    integrity = "sha256-yLVbuU8I/7wTSmCifWYUqY45Q5aMRqWZkkkX6uXaFio=",
    strip_prefix = "rules_cc-cb995b18db7c855fe95cacf0a0e84fda8c58725d",
    urls = ["https://github.com/ArchangelX360/rules_cc/archive/cb995b18db7c855fe95cacf0a0e84fda8c58725d.tar.gz"],
)

single_version_override(
    module_name = "highway",
    patch_strip = 1,
    patches = ["//nodejs/private/patches/highway:rules-cc.patch"],
    version = "1.2.0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "v8_python_deps",
    python_version = "3.11",
    requirements_lock = "//nodejs/private:v8_requirements.txt",
)
use_repo(pip, "v8_python_deps")

rules_rust = use_extension("@rules_rs//rs:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

rust = use_extension(
    "@rules_rs//rs:rules_rust_reexported_extensions.bzl",
    "rust",
    dev_dependency = True,
)
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
    rustfmt_version = "1.82.0",
    versions = ["1.82.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
    dev_dependency = True,
)

nodejs = use_extension("//nodejs:extensions.bzl", "nodejs", dev_dependency = True)
nodejs.version(version = "26.3.1")
use_repo(nodejs, "nodejs_26_3_1", "nodejs_crates_26_3_1", "nodejs_icu_26_3_1", "v8")

nodejs_crates = use_extension("@rules_rs//rs:extensions.bzl", "crate", dev_dependency = True)
nodejs_crates.from_cargo(
    name = "nodejs_crates_generated",
    cargo_lock = "@nodejs_crates_26_3_1//:Cargo.lock",
    cargo_toml = "@nodejs_crates_26_3_1//:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
    use_legacy_rules_rust_platforms = True,
)
use_repo(nodejs_crates, "nodejs_crates_generated")
