load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "target_linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "target_macos",
    constraint_values = ["@platforms//os:macos"],
)

config_setting(
    name = "target_x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

config_setting(
    name = "target_arm64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

exports_files([
    "bazel/release.bzl",
    "bazel/release_metadata.json",
    "common.gypi",
    "configure.py",
    "node.gyp",
    "src/node_version.h",
])

filegroup(
    name = "release_metadata",
    srcs = ["bazel/release_metadata.json"],
)

filegroup(
    name = "configure_audit_sources",
    srcs = [
        "common.gypi",
        "configure.py",
        "node.gyp",
    ] + glob([
        "tools/v8_gypfiles/*.gyp",
        "tools/v8_gypfiles/*.gypi",
    ]),
)

_LIBUV_COMMON_SOURCES = [
    "deps/uv/src/fs-poll.c",
    "deps/uv/src/idna.c",
    "deps/uv/src/inet.c",
    "deps/uv/src/random.c",
    "deps/uv/src/strscpy.c",
    "deps/uv/src/strtok.c",
    "deps/uv/src/thread-common.c",
    "deps/uv/src/threadpool.c",
    "deps/uv/src/timer.c",
    "deps/uv/src/uv-common.c",
    "deps/uv/src/uv-data-getter-setters.c",
    "deps/uv/src/version.c",
]

_LIBUV_UNIX_SOURCES = [
    "deps/uv/src/unix/async.c",
    "deps/uv/src/unix/core.c",
    "deps/uv/src/unix/dl.c",
    "deps/uv/src/unix/fs.c",
    "deps/uv/src/unix/getaddrinfo.c",
    "deps/uv/src/unix/getnameinfo.c",
    "deps/uv/src/unix/loop-watcher.c",
    "deps/uv/src/unix/loop.c",
    "deps/uv/src/unix/pipe.c",
    "deps/uv/src/unix/poll.c",
    "deps/uv/src/unix/process.c",
    "deps/uv/src/unix/random-devurandom.c",
    "deps/uv/src/unix/signal.c",
    "deps/uv/src/unix/stream.c",
    "deps/uv/src/unix/tcp.c",
    "deps/uv/src/unix/thread.c",
    "deps/uv/src/unix/tty.c",
    "deps/uv/src/unix/udp.c",
]

cc_library(
    name = "libuv",
    srcs = _LIBUV_COMMON_SOURCES + _LIBUV_UNIX_SOURCES + select(
        {
            ":target_linux": [
                "deps/uv/src/unix/linux.c",
                "deps/uv/src/unix/procfs-exepath.c",
                "deps/uv/src/unix/proctitle.c",
                "deps/uv/src/unix/random-getrandom.c",
                "deps/uv/src/unix/random-sysctl-linux.c",
            ],
            ":target_macos": [
                "deps/uv/src/unix/bsd-ifaddrs.c",
                "deps/uv/src/unix/darwin-proctitle.c",
                "deps/uv/src/unix/darwin.c",
                "deps/uv/src/unix/fsevents.c",
                "deps/uv/src/unix/kqueue.c",
                "deps/uv/src/unix/proctitle.c",
                "deps/uv/src/unix/random-getentropy.c",
            ],
        },
        no_match_error = "libuv currently supports Linux and macOS targets",
    ),
    hdrs = glob([
        "deps/uv/include/**/*.h",
        "deps/uv/src/**/*.h",
    ]),
    copts = [
        "-fno-strict-aliasing",
        "-Wno-unused-parameter",
    ],
    defines = [
        "_FILE_OFFSET_BITS=64",
        "_LARGEFILE_SOURCE",
    ] + select(
        {
            ":target_linux": [
                "_GNU_SOURCE",
                "_POSIX_C_SOURCE=200112",
            ],
            ":target_macos": [
                "_DARWIN_UNLIMITED_SELECT=1",
                "_DARWIN_USE_64_BIT_INODE=1",
            ],
        },
        no_match_error = "libuv currently supports Linux and macOS targets",
    ),
    includes = [
        "deps/uv/include",
        "deps/uv/src",
    ],
    linkopts = select(
        {
            ":target_linux": [
                "-ldl",
                "-lm",
                "-lpthread",
                "-lrt",
            ],
            ":target_macos": [
                "-lm",
                "-lpthread",
            ],
        },
        no_match_error = "libuv currently supports Linux and macOS targets",
    ),
)

cc_binary(
    name = "node_js2c",
    srcs = [
        "src/builtin_info.cc",
        "src/builtin_info.h",
        "src/embedded_data.cc",
        "src/embedded_data.h",
        "tools/executable_wrapper.h",
        "tools/js2c.cc",
    ],
    copts = ["-std=c++20"],
    defines = ["NODE_JS2C_USE_STRING_LITERALS"],
    includes = [
        "src",
        "tools",
    ],
    linkopts = select(
        {
            ":target_linux": [],
            ":target_macos": [
                "-framework CoreFoundation",
                "-framework Security",
            ],
        },
        no_match_error = "node_js2c currently supports Linux and macOS targets",
    ),
    deps = [
        ":libuv",
        "@v8//:simdutf",
    ],
)

cc_library(
    name = "zlib_headers",
    hdrs = glob([
        "deps/zlib/*.h",
        "deps/zlib/contrib/optimizations/*.h",
    ]),
    includes = ["deps/zlib"],
)

cc_library(
    name = "zlib_adler32_simd",
    srcs = ["deps/zlib/adler32_simd.c"],
    copts = select(
        {
            ":target_x86_64": ["-mssse3"],
            ":target_arm64": [],
        },
        no_match_error = "zlib_adler32_simd currently supports x86_64 and arm64 targets",
    ),
    defines = select(
        {
            ":target_x86_64": [
                "ADLER32_SIMD_SSSE3",
                "X86_NOT_WINDOWS",
            ],
            ":target_arm64": ["ADLER32_SIMD_NEON"],
        },
        no_match_error = "zlib_adler32_simd currently supports x86_64 and arm64 targets",
    ),
    deps = [":zlib_headers"],
)

cc_library(
    name = "zlib_data_chunk_simd",
    srcs = [
        "deps/zlib/contrib/optimizations/inffast_chunk.c",
        "deps/zlib/contrib/optimizations/inflate.c",
    ],
    defines = select(
        {
            ":target_x86_64": [
                "DEFLATE_CHUNK_WRITE_64LE",
                "INFLATE_CHUNK_READ_64LE",
                "INFLATE_CHUNK_SIMD_SSE2",
            ],
            ":target_arm64": [
                "DEFLATE_CHUNK_WRITE_64LE",
                "INFLATE_CHUNK_READ_64LE",
                "INFLATE_CHUNK_SIMD_NEON",
            ],
        },
        no_match_error = "zlib_data_chunk_simd currently supports x86_64 and arm64 targets",
    ),
    deps = [":zlib_headers"],
)

cc_library(
    name = "zlib_arm_crc32",
    srcs = ["deps/zlib/crc32_simd.c"],
    defines = ["CRC32_ARMV8_CRC32"] + select(
        {
            ":target_linux": ["ARMV8_OS_LINUX"],
            ":target_macos": ["ARMV8_OS_MACOS"],
        },
        no_match_error = "zlib_arm_crc32 currently supports Linux and macOS targets",
    ),
    target_compatible_with = ["@platforms//cpu:aarch64"],
    deps = [":zlib_headers"],
)

cc_library(
    name = "zlib",
    srcs = [
        "deps/zlib/adler32.c",
        "deps/zlib/compress.c",
        "deps/zlib/cpu_features.c",
        "deps/zlib/crc32.c",
        "deps/zlib/deflate.c",
        "deps/zlib/gzclose.c",
        "deps/zlib/gzlib.c",
        "deps/zlib/gzread.c",
        "deps/zlib/gzwrite.c",
        "deps/zlib/infback.c",
        "deps/zlib/inffast.c",
        "deps/zlib/inftrees.c",
        "deps/zlib/trees.c",
        "deps/zlib/uncompr.c",
        "deps/zlib/zutil.c",
    ],
    copts = ["-Wno-implicit-fallthrough"],
    defines = ["HAVE_HIDDEN"] + select(
        {
            ":target_x86_64": [
                "DEFLATE_SLIDE_HASH_SSE2",
                "INFLATE_CHUNK_READ_64LE",
            ],
            ":target_arm64": [
                "DEFLATE_SLIDE_HASH_NEON",
                "INFLATE_CHUNK_READ_64LE",
                "__ARM_NEON__",
            ],
        },
        no_match_error = "zlib currently supports x86_64 and arm64 targets",
    ) + select(
        {
            ":target_linux": [],
            ":target_macos": ["USE_FILE32API"],
        },
        no_match_error = "zlib currently supports Linux and macOS targets",
    ),
    includes = ["deps/zlib"],
    deps = [
        ":zlib_adler32_simd",
        ":zlib_data_chunk_simd",
        ":zlib_headers",
    ] + select(
        {
            ":target_x86_64": [],
            ":target_arm64": [":zlib_arm_crc32"],
        },
        no_match_error = "zlib currently supports x86_64 and arm64 targets",
    ),
)

cc_library(
    name = "llhttp",
    srcs = [
        "deps/llhttp/src/api.c",
        "deps/llhttp/src/http.c",
        "deps/llhttp/src/llhttp.c",
    ],
    hdrs = ["deps/llhttp/include/llhttp.h"],
    includes = ["deps/llhttp/include"],
)

cc_library(
    name = "cares",
    srcs = glob(["deps/cares/src/lib/**/*.c"]),
    hdrs = glob([
        "deps/cares/config/darwin/*.h",
        "deps/cares/config/linux/*.h",
        "deps/cares/include/*.h",
        "deps/cares/src/lib/**/*.h",
    ]),
    copts = [
        "-pedantic",
        "-std=gnu11",
        "-Wall",
        "-Wextra",
        "-Wno-error=deprecated-declarations",
        "-Wno-unused-parameter",
    ],
    defines = [
        "CARES_STATICLIB",
        "HAVE_CONFIG_H",
        "_DARWIN_USE_64_BIT_INODE=1",
        "_FILE_OFFSET_BITS=64",
        "_GNU_SOURCE",
        "_LARGEFILE_SOURCE",
    ],
    includes = [
        "deps/cares/include",
        "deps/cares/src/lib",
        "deps/cares/src/lib/include",
    ] + select(
        {
            ":target_linux": ["deps/cares/config/linux"],
            ":target_macos": ["deps/cares/config/darwin"],
        },
        no_match_error = "cares currently supports Linux and macOS targets",
    ),
)
